# study

./: .clang-format  .gitignore  CMakePresets.json  CMakeUserPresets.json.example  CMakelists.txt  README.md  vcpkg.json
algorithm/sort/: CMakeLists.txt
algorithm/sort/src/: MySort.cpp  MySort.h
algorithm/sort/test/: Test.cpp  Test.h  main.cpp
cmake/: general.cmake
demo/: CMakelists.txt
demo/coroutine/: CMakelists.txt  main.cpp
demo/modular/: CMakelists.txt
demo/modular/libs/lib1/: CMakelists.txt
demo/modular/libs/lib1/include/lib1/: Lib1.h
demo/modular/libs/lib1/src/: Lib1.cpp
demo/modular/libs/lib2/: CMakelists.txt
demo/modular/libs/lib2/include/lib2/: Lib2.h
demo/modular/libs/lib2/src/: Lib2.cpp
demo/modular/libs/lib3/: CMakelists.txt
demo/modular/libs/lib3/src/: Lib3.cpp
demo/modular/src/: main.cpp
learn/: CMakelists.txt
learn/designated-initialization/: CMakelists.txt  main.cpp
learn/module/: CMakelists.txt  hello.ixx  main.cpp  test-impl.ixx  test.ixx
practices/: CMakelists.txt
practices/PAT/basic/: .clang-format  CMakeLists.txt  README.md
practices/PAT/basic/src/: 1001.cpp  1002.cpp  1003.cpp  1004.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1010.cpp  1011.cpp  1012.cpp  1012_.cpp  1013.cpp  1014.cpp  1015.cpp  1016.cpp  1017.cpp  1018.cpp  1019.cpp  1020.cpp  1021.cpp  1022.cpp  1023.cpp  1024.cpp  1025.cpp  1026.cpp  1027.cpp
practices/leetcode/: CMakeLists.txt
practices/leetcode/libs/00000/src/: Solution.h
practices/leetcode/libs/00000/tests/: main.cpp
practices/leetcode/libs/00001/src/: Solution.cpp  Solution.h
practices/leetcode/libs/00001/tests/: main.cpp
practices/leetcode/libs/00002/src/: Solution.cpp  Solution.h
practices/leetcode/libs/00002/tests/: main.cpp
practices/leetcode/libs/00003/src/: Solution.cpp  Solution.h
practices/leetcode/libs/00003/tests/: main.cpp
practices/leetcode/libs/0002_add_two_numbers/src/: Solution.cpp
practices/leetcode/src/0001_tow_sum/: Solution.h
practices/leetcode/src/0002_add_two_numbers/: Solution.h
research/: CMakelists.txt
research/data-struct-alignment/: CMakelists.txt  README.md  Utils.hpp  main.cpp
research/data-struct-alignment/include/: Utils.hpp
research/data-struct-alignment/src/: main.cpp
research/dll-dll-export/: CMakelists.txt  launch.vs.json  main.cpp
research/dll-lib-export/: CMakelists.txt  launch.vs.json  main.cpp
(+1 files in other folders)
